# frontmatter-cli

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Pipfile  README.md  code-of-conduct.md  justfile  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  tasks.py
frontmatter_cli/: __init__.py  __main__.py  cli.py
