[metadata]
name = frontmatter_cli
version = 2023.3.0
description = Frontmatter CLI tool to make working with frontmatter easier.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jefftriplett/frontmatter-cli
author = Jeff Triplett
author_email = jeff.triplett@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords = frontmatter, frontmatter-cli

[options]
packages = frontmatter_cli
install_requires =
    click
    click-default-group
    python-frontmatter
python_requires = >=3.7
zip_safe = False

[options.entry_points]
console_scripts =
    frontmatter = frontmatter_cli:cli
    frontmatter-cli = frontmatter_cli:cli

[wheel]
universal = 1

[bdist_wheel]
universal = 1
